--- a/app/views/lookbook/components/_nav_preview.html.erb
+++ b/app/views/lookbook/components/_nav_preview.html.erb
@@ -6,6 +6,8 @@
     <% end %>
   <% end %>
 <% else %>
-  <% example = examples.first %>
-  <%= component "nav_item", item: example, depth: example.hierarchy_depth, label: node.label, display: :node %>
+  <% if examples.any? %>
+    <% example = examples.first %>
+    <%= component "nav_item", item: example, depth: example.hierarchy_depth, label: node.label, display: :node %>
+  <% end %>
 <% end %>
