bg colour tweaks

--- a/app/views/lookbook/components/_drawer.html.erb
+++ b/app/views/lookbook/components/_drawer.html.erb
@@ -57,7 +57,7 @@
           </div>
         </nav>
       </div>
-      <div class="flex items-center bg-gray-50 border-l border-gray-300 ml-auto space-x-3 px-3">
+      <div class="flex items-center bg-white border-l border-gray-200 ml-auto space-x-3 px-3">
         <div>
           <% panels.each do |key, props| %>
             <div
