--- a/app/views/lookbook/components/_preview.html.erb
+++ b/app/views/lookbook/components/_preview.html.erb
@@ -29,7 +29,7 @@
         <span class="text-gray-500">x</span>
         <span x-text="`${preview.height}px`"></span>
       </div>
-      <div class="flex items-center bg-gray-50 border-l border-gray-300 space-x-3 text-gray-400 divide-x divide-gray-300 px-3">
+      <div class="flex items-center bg-white border-l border-gray-200 space-x-3 text-gray-400 divide-x divide-gray-300 px-3">
         <div class="flex items-center space-x-3">
           <button
             x-tooltip.theme.lookbook="`Refresh preview`"
