--- a/app/views/lookbook/panels/_output.html.erb
+++ b/app/views/lookbook/panels/_output.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 h-full bg-gray-50 overflow-auto" data-morph-strategy="replace">
+<div class="p-4 h-full bg-white overflow-auto" data-morph-strategy="replace">
   <%= component "code", wrap: "vertical" do -%>
     <% if examples.many? %>
       <% examples.each do |example| -%>
