--- a/app/views/lookbook/show.html.erb
+++ b/app/views/lookbook/show.html.erb
@@ -5,9 +5,9 @@
   :style="`${horizontal ? `grid-template-rows: 1fr 1px ${drawerHidden ? '0' : $store.inspector.drawer.height}px` : `grid-template-columns: 1fr 1px ${drawerHidden ? '0' : $store.inspector.drawer.width}px` }`">
   <%= component "preview", example: @example, examples: @examples, panels: @preview_panels %>
   <div
-    x-data="splitter('horizontal')"
+    x-data="splitter('horizontal', {minSize: $store.inspector.drawer.minHeight})"
     class="w-full gutter border-t border-gray-300 relative"
-    x-effect="$store.inspector.drawer.height = splits[2] || $store.inspector.drawer.height"
+    x-effect="$store.inspector.drawer.height = maxDrawerHeight ? Math.min(splits[2] || $store.inspector.drawer.height, maxDrawerHeight) : splits[2] || $store.inspector.drawer.height"
     x-show="horizontal && !drawerHidden"
   >
     <div class="h-[11px] w-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute left-0 right-0 -translate-y-1/2 cursor-[row-resize]"></div>
@@ -15,7 +15,7 @@
   <div
     x-data="splitter('vertical', {minSize: $store.inspector.drawer.minWidth})"
     class="h-full gutter border-r border-gray-300 relative"
-    x-effect="$store.inspector.drawer.width = splits[2] || $store.inspector.drawer.width"
+    x-effect="$store.inspector.drawer.width = maxDrawerWidth ? Math.min(splits[2] || $store.inspector.drawer.width, maxDrawerWidth) : splits[2] || $store.inspector.drawer.width"
     x-show="vertical && !drawerHidden"
   >
     <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 -translate-x-1/2 cursor-[col-resize] z-10"></div>
