Add basic lookup for pages

--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -36,7 +36,7 @@
         <%= component "filter" %>
       </div>
       <div class="flex-grow overflow-y-auto">
-        <%= component "nav", items: @nav.items %>
+        <%= component "nav", items: @nav[:previews].items %>
       </div>
     </div>
     <div
