--- a/public/lookbook-assets/css/app.css
+++ b/public/lookbook-assets/css/app.css
@@ -901,10 +901,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: -1px;
   bottom: -1px;
   left: -1px;
-}.left-0 {
-  left: 0px;
-}.right-0 {
-  right: 0px;
 }.top-0 {
   top: 0px;
 }.bottom-0 {
@@ -915,6 +911,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 50%;
 }.right-2 {
   right: 0.5rem;
+}.left-0 {
+  left: 0px;
+}.right-0 {
+  right: 0px;
 }.-top-px {
   top: -1px;
 }.-left-px {
@@ -926,10 +926,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }.mt-4 {
   margin-top: 1rem;
-}.mt-3 {
-  margin-top: 0.75rem;
-}.mt-2 {
-  margin-top: 0.5rem;
 }.ml-4 {
   margin-left: 1rem;
 }.-mb-px {
@@ -946,6 +942,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.375rem;
 }.ml-\[3px\] {
   margin-left: 3px;
+}.mt-3 {
+  margin-top: 0.75rem;
+}.mt-2 {
+  margin-top: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
 }.block {
@@ -960,12 +960,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }.hidden {
   display: none;
-}.h-screen {
-  height: 100vh;
 }.h-full {
   height: 100%;
-}.h-\[11px\] {
-  height: 11px;
+}.h-screen {
+  height: 100vh;
 }.h-10 {
   height: 2.5rem;
 }.h-5 {
@@ -974,6 +972,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 0.875rem;
 }.h-3 {
   height: 0.75rem;
+}.h-\[11px\] {
+  height: 11px;
 }.h-6 {
   height: 1.5rem;
 }.h-4 {
@@ -982,10 +982,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-height: 0px;
 }.w-full {
   width: 100%;
-}.w-\[9px\] {
-  width: 9px;
 }.w-screen {
   width: 100vw;
+}.w-\[9px\] {
+  width: 9px;
 }.w-5 {
   width: 1.25rem;
 }.w-3\.5 {
@@ -1000,21 +1000,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-width: 0px;
 }.min-w-\[120px\] {
   min-width: 120px;
-}.max-w-xs {
-  max-width: 20rem;
 }.max-w-\[800px\] {
   max-width: 800px;
+}.max-w-xs {
+  max-width: 20rem;
 }.flex-none {
   flex: none;
 }.flex-shrink-0 {
   flex-shrink: 0;
 }.flex-grow {
   flex-grow: 1;
-}.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: var(--tw-transform);
 }.-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: var(--tw-transform);
+}.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: var(--tw-transform);
 }.translate-x-5 {
   --tw-translate-x: 1.25rem;
@@ -1032,14 +1032,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-x: -1;
   --tw-scale-y: -1;
   transform: var(--tw-transform);
-}.cursor-\[row-resize\] {
-  cursor: row-resize;
 }.cursor-\[col-resize\] {
   cursor: col-resize;
 }.cursor-auto {
   cursor: auto;
 }.cursor-pointer {
   cursor: pointer;
+}.cursor-\[row-resize\] {
+  cursor: row-resize;
 }.cursor-\[nwse-resize\] {
   cursor: nwse-resize;
 }.select-none {
@@ -1109,14 +1109,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 2px;
 }.border {
   border-width: 1px;
-}.border-t {
-  border-top-width: 1px;
-}.border-r {
-  border-right-width: 1px;
 }.border-b {
   border-bottom-width: 1px;
+}.border-r {
+  border-right-width: 1px;
 }.border-b-2 {
   border-bottom-width: 2px;
+}.border-t {
+  border-top-width: 1px;
 }.border-l-2 {
   border-left-width: 2px;
 }.border-l {
@@ -1132,20 +1132,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}.bg-transparent {
-  background-color: transparent;
 }.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.bg-transparent {
+  background-color: transparent;
 }.\!bg-indigo-100 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(224 231 255 / var(--tw-bg-opacity)) !important;
+}.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }.bg-indigo-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
@@ -1213,6 +1213,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }.text-\[11px\] {
   font-size: 11px;
+}.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }.font-bold {
   font-weight: 700;
 }.uppercase {
@@ -1229,21 +1232,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
-}.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }.\!text-gray-300 {
   --tw-text-opacity: 1 !important;
   color: rgb(209 213 219 / var(--tw-text-opacity)) !important;
+}.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.\!text-green-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
@@ -1253,6 +1250,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}.text-red-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
 }.text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
