Clean up websocket configuration

--- a/app/views/layouts/lookbook/app.html.erb
+++ b/app/views/layouts/lookbook/app.html.erb
@@ -10,7 +10,7 @@
     <link rel="icon" href="<%= config.ui_favicon || "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>" %>">
   <% end %>
 
-  <% if config.auto_refresh %>
+  <% if Lookbook::Engine.websocket %>
     <script>
       window.SOCKET_PATH = "<%= Lookbook::Engine.websocket_mount_path %>";
     </script>
