--- a/app/views/lookbook/pages/not_found.html.erb
+++ b/app/views/lookbook/pages/not_found.html.erb
@@ -1,1 +1,13 @@
-not found
+<div class="bg-white flex flex-col items-center justify-center h-screen w-full">
+  <div class="p-4 text-center">
+    <%= icon "alert-triangle", size: 10, class: "text-red-300 mx-auto" %>
+    <div class="mt-3 text-gray-700 max-w-xs">
+      <div data-role="page-not-found">
+        <h5 class="text-base">Not found</h5>
+        <p class="mt-2 text-gray-400 text-sm">
+          The page "<span class="text-gray-500"><%= params[:path] %></span>" does not exist.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
