--- a/app/views/lookbook/components/_nav_section.html.erb
+++ b/app/views/lookbook/components/_nav_section.html.erb
@@ -1,8 +1,8 @@
 <div x-data="navSection" <% if classes %> class="<%= classes %>"<% end %>>
-  <div class="h-10 pl-3 pr-1 py-2 flex items-center border-b border-gray-300"> 
+  <div class="pl-3 pr-3 py-2 pt-2.5 flex items-center border-b border-gray-300 bg-gray-50"> 
     <div class="flex items-center w-full cursor-pointer" @click="toggle">
-      <%= icon "${open ? 'chevron-down' : 'chevron-right'}", size: 3, class: "mr-1 text-gray-600" %>
-      <h2 class="font-bold text-gray-700 uppercase tracking-wide text-xs"><%= title %></h2>
+      <h2 class="font-bold text-gray-700 uppercase text-xs"><%= title %></h2>
+      <%= icon "${open ? 'chevron-down' : 'chevron-right'}", size: 3.5, class: "ml-auto text-gray-600" %>
     </div>
   </div>
   <div :class="{hidden: !open}">
