--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -1,22 +1,21 @@
-<div class="grid grid-rows-[40px_1fr] bg-gray-50 h-full">
-  <div class="px-4 w-full flex-none bg-white border-b border-gray-300 flex items-center h-10 select-none min-w-0">
-    <div class="ml-auto text-gray-400">
-      <%#= @page.path %>
-    </div>
-  </div>
-  <div class="px-10 mx-auto w-full pt-8 overflow-auto pb-10 max-w-6xl">
-    <% if @page.title? %>
-      <header class="border-b border-gray-300 pb-6 mb-10 prose max-w-none">
-        <h1>
-          <%= @page.title %>
-        </h1>
-      </header>
-    <% end %>
-    <div class="overflow-auto text-gray-600" data-morph-strategy="replace">
-      <div class="prose max-w-none">
-        <%= @page_content %>
+<div id="page" class="grid grid-rows-[40px_1fr] bg-gray-50 h-full">
+  <%= component "header" do %>
+  
+  <% end %>
+  <div class="px-4 md:px-10 w-full pt-8 overflow-auto pb-10">
+    <div class="w-full max-w-[52rem] mx-auto text-gray-600">
+      <% if @page.title? %>
+        <header class="border-b border-gray-300 pb-8 mb-10 prose max-w-none">
+          <h1>
+            <%= @page.title %>
+          </h1>
+        </header>
+      <% end %>
+      <div data-morph-strategy="replace">
+        <div class="prose max-w-none">
+          <%= @page_content %>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
