--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -1,33 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" class="h-screen">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-  <link href="/lookbook-assets/css/app.css?v=<%= Lookbook::VERSION %>" rel="stylesheet">
-  <% if config.ui_favicon != false %>
-    <link rel="icon" href="<%= config.ui_favicon || "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>" %>">
-  <% end %>
-
-  <% if Lookbook::Engine.websocket %>
-    <script>
-      window.SOCKET_PATH = "<%= Lookbook::Engine.websocket_mount_path %>";
-    </script>
-  <% end %>
-  <script src="/lookbook-assets/js/app.js?v=<%= Lookbook.version %>" defer></script>
-  
-  <title><%= [@example&.label, @preview&.label, "Lookbook"].compact.join(" :: ") %></title>
-</head>
-<body class="text-gray-800 font-sans text-sm antialiased overflow-hidden">
+<%= content_for :body do %>
   <div
-    id="page"
+    id="app"
     x-data="app"
     :style="`grid-template-columns: ${$store.sidebar.width}px 1px 1fr;`"
     @popstate.window="update"
     @resize.window="$store.layout.desktop = window.innerWidth >= $store.layout.desktopWidth"
-    class="md:grid w-screen h-screen"
-  >
+    class="md:grid w-screen h-screen">
     <div
       x-data="sidebar"
       @page:morphed.window="setActiveNavItem"
@@ -39,7 +17,7 @@
         <button class="flex-none ml-4 md:hidden" @click="$store.sidebar.toggle">
           <%= icon "x", size: 4, class: "hover:text-indigo-500" %>
         </button>
-        <div class="bg-white flex flex-none items-center relative w-full" x-cloak>
+        <div class="bg-white flex flex-grow items-center relative" x-cloak>
           <%= component "filter" %>
         </div>
       </div>
@@ -60,24 +38,23 @@
           <%= component "nav", items: @nav[:previews].items, entity: "preview" %>
         </div>
       <% end %>
-      
+         
     </div>
     <div
       x-data="splitter('vertical', {minSize: $store.sidebar.minWidth})"
       class="h-full gutter border-r border-gray-300 relative"
       x-show="$store.layout.desktop"
       x-effect="$store.sidebar.width = Math.min(splits[0] || $store.sidebar.width, $store.sidebar.maxWidth)"
-      x-cloak
-    >
+      x-cloak>
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 -translate-x-1/2 cursor-[col-resize] z-10"></div>
     </div>
     <main
       id="main"
       class="h-full overflow-hidden w-full"
-      x-show="$store.layout.desktop || !$store.sidebar.open" x-cloak
-    >
+      x-show="$store.layout.desktop || !$store.sidebar.open" x-cloak>
       <%= yield %>
     </main>
   </div>
-</body>
-</html>
+<% end %>
+
+<%= render template: "layouts/lookbook/skeleton" %>
