--- a/app/views/lookbook/previews/not_found.html.erb
+++ b/app/views/lookbook/previews/not_found.html.erb
@@ -1,5 +1,5 @@
-<div class="bg-white flex flex-col items-center justify-center h-screen w-full">
-  <div class="p-4 text-center">
+<div id="not-found" class="bg-white flex flex-col items-center justify-center h-screen w-full">
+  <div class="px-4 text-center">
     <%= icon "alert-triangle", size: 10, class: "text-red-300 mx-auto" %>
     <div class="mt-3 text-gray-700 max-w-xs">
       <% if @preview %>
